# nostr_elixir

./: .gitignore  LICENSE  README.md  mix.exs
lib/: nostr_elixir.ex
lib/nostr_elixir/: event.ex  filter.ex  keys.ex  mnemonic.ex  nip02.ex  nip06.ex  nip09.ex  nip10.ex  nip17.ex  nip19.ex  nip23.ex  nip44.ex  nip57.ex  nip65.ex
native/nostr_nif/: Cargo.toml
native/nostr_nif/src/: lib.rs
test/: event_test.exs  filter_test.exs  keys_test.exs  mnemonic_test.exs  nip02_test.exs  nip06_test.exs  nip09_test.exs  nip10_test.exs  nip17_test.exs  nip19_test.exs  nip23_test.exs  nip44_test.exs  nip57_test.exs  nip65_test.exs  nostr_elixir_test.exs
