[package]
name = "nostr_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "nostr_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nostr = { version = "0.42.2", features = ["std", "parser", "nip44", "nip46", "nip57", "nip05"], default-features = false }
bip39 = "2.0"
bitcoin = "0.30"
hex = "0.4" 